...
                                        layout.minimumCellWidth,
                                ),
                            modifier =
                                Modifier
                                    .fillMaxSize()
                                    .testTag(
                                        "recent-album-grid",
                                    ),
                            horizontalArrangement =
                                Arrangement.spacedBy(
                                    16.dp,
                                ),
                            verticalArrangement =
...
